# report-anonymizer

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  Makefile  README.md  install.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-lock-windows.txt  requirements.txt
anonymize/: __init__.py  _paths.py  _proc.py  app_settings.py  applier.py  auditor.py  bootstrap.py  budget.py  builder.py  candidates.py  chunker.py  critic.py  decisions_log.py  detector.py  download_queue.py  env_check.py  hardware.py  hf_models.py  image_inventory.py  image_redactor.py  llm_client.py  log_utils.py  migrations.py  model_size.py  pdf_render.py  pipeline.py  placeholders.py  project.py  rules_pass.py  scanner.py  server_doctor.py  server_manager.py  server_profile.py  structure_chunker.py  sub_map.py  templates.py  triage.py  verifier.py
bench/: apply_bench_to_catalog.py  run_corpus_x5.py  run_extra_models_benchmark.py  run_model_benchmark.py  run_precision_benchmark.py  synthetic_fixtures.py
config/: leak_patterns.yml  safe_terms.yml  server_profiles.yml  substitution_map.yml
docs/: anonymization-scope.md  architecture.md  benchmarks.md  contributing.md  faq.md  index.md  install-windows.md  presets.md  requirements.txt
gui/: __init__.py  _dismissible_dialog.py  _render_panes.py  _win_subprocess_patch.py  about_dialog.py  app.py  build_preview_panel.py  deployment_chooser_dialog.py  diff_view.py  empty_state.py  export_dialog.py  file_tree_view.py  first_run_wizard.py  gated_repo_dialog.py  icons.py  image_editor.py  image_review_panel.py  import_dialog.py  main.py  model_manager_dialog.py  pipeline_view.py  preset_editor.py  preset_gallery.py  review_view.py  scan_preview_dialog.py  server_error_dialog.py  server_panel.py  server_widget.py  settings_dialog.py  shortcuts_overlay.py  sidebar.py  splash.py  state.py  theme.py  toast.py  tray.py  verifier_view.py  welcome_view.py  workers.py
packaging/: build-all.sh
prompts/: audit_user.txt.j2  critic_user.txt.j2  detect_user.txt.j2  system_audit.txt  system_critic.txt  system_detector.txt
scripts/: uninstall.sh
templates/: index.yml
tests/: _fake_llama_server.py  conftest.py  test_apply_atomic.py  test_auto_resolve_residuals.py  test_build_leak_warning.py  test_build_popup_storm.py  test_chunker.py  test_cli_force_rescan.py  test_deployment_chooser_windows.py  test_detector_mode.py  test_dismissible_dialog.py  test_download_queue.py  test_env_check.py  test_first_run_wizard_installer_aware.py  test_gui_approval_gate.py  test_gui_smoke.py  test_hardware.py  test_hardware_report_dict.py  test_hardware_sentinel.py  test_hardware_windows.py  test_hf_models_paths.py  test_image_inventory.py  test_image_redactor.py  test_lifecycle_paused.py  test_llm_parallel.py  test_migrate_map.py  test_migrations.py  test_model_manager_progress_overflow.py  test_new_model_presets.py  test_paths.py  test_pdf_inplace_glyph_coverage.py  test_pdf_inplace_overlap.py  (+26 more)
(+63 files in other folders)
